# sorting-algorithm-viewer

./: CMakeLists.txt  README.md
include/: constants.h  exec_strategies.h  sorting.h  types.h  utils.h  visualizer.h
src/: bubble_sort.c  exec_strategies.c  insertion_sort.c  main.c  selection_sort.c  utils.c  visualizer.c
src/sorts/: bubble_sort.c  insertion_sort.c  quick_sort_recursive_last_pivot.c  selection_sort.c
